--- a/GitProject_2/WebContent/index.html
+++ b/GitProject_2/WebContent/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <h4>현수를 초대한다.</h4>
